build: establish monorepo aggregator + pic-sure-bom scaffold